# issue3330

./: pyproject.toml  test.sh
tests/: test_issue3330.py
