[tool.poetry]
name = "issue3330"
version = "0.1.0"
description = ""
authors = ["gitpushdashf"]

[tool.poetry.dependencies]
python = "^3.8"
subpackage = {path = "packages/subpackage"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
